--- a/zÉbET/backOffice/backOffice.csproj
+++ b/zÉbET/backOffice/backOffice.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAddJogo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddJogo.Designer.cs">
+      <DependentUpon>FormAddJogo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAddJogo.resx">
+      <DependentUpon>FormAddJogo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
